<resources>
    <string name="app_name">BioCapture</string>
    <string name="editTextClass_contentDescription">Class input field</string>
    <string name="editTextDepartment_contentDescription">Department input field</string>
    <string name="editTextCourse_contentDescription">Course input field</string>
    <string name="editTextStatus_contentDescription">Status input field</string>
    <string name="editTextStudentname_contentDescription">Student Name input field</string>
    <string name="title">title</string>
    <string name="todo">TODO</string>

    <!--    FINGERPRINT SENSOR SAMPLE       -->
    <string name="capture">Capture</string>
    <string name="choosePic">Choose</string>
    <string name="stop">Stop</string>
    <string name="verify">Verify</string>
    <string name="textForReference">Reference Fingerprint sensor code with full features  and documentation is located in MorphoSmart SDK (in MorphoSample folder), which is included in ID Screen SDK.
    </string>
    <string name="textForTooSlimReference">Reference fingerprint sensor code with full features and documentation is located in MorphoLiveScan SDK, which is located in ID Screen SDK archive.
    </string>
    <string name="noAccessToDevice">Warning: cannot connect to fingerprint sensor.\n\nPlease open item \"Peripheral Management\" in this application main menu and check following settings :\n\t- Fingerprint sensor should be enabled\n\t- USB mode should be set to "Host". Or it should be set to "Auto" and PC shouldn\'t be connected to tablet.\n\nPlease also check that no other fingerprint sensor is connected to tablet.
    </string>
    <string name="cameraPreviewForMore">Preflash and flash brightness can be checked by taking a picture.\nPlease open Camera application below.</string>
    <string name="incompatibleFirmware">Your device is not running example secure firmware (version Sxx-y).\nSome features will not be available or will not work properly.\nPlease update your device to example secure firmware to use all features.</string>
    <string name="incompatibleFirmware60">Your device is not running example secure firmware (version Kxx-y).\nSome features will not be available or will not work properly.\nPlease update your device to example secure firmware to use all features.</string>
    <string name="sensorInitiliazing">Initializing fingerprint sensor, please wait …</string>
    <string name="Verify">verify</string>
    <string name="usb_mode_0"></string>
    <string name="usb_mode_1"></string>
    <string name="usb_mode_2"></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="userid">Username</string>
    <string name="name">Input Name</string>
    <string name="department">Input Department</string>
    <string name="pin">4 digit</string>
    <string name="contact">07000...</string>
    <string name="permission1">Registration</string>
    <string name="permission2">Verification</string>
    <string name="permission3">Refactor</string>
    <string name="permission4">"Reports "</string>
    <string name="adduser">User</string>

    <string-array name="action_options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>