<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="16dp">


    <EditText
        android:id="@+id/userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/userid" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name" />
    <EditText
        android:id="@+id/department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/department" />

    <EditText
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/pin" />
    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/contact" />

    <CheckBox
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"/>

    <CheckBox
        android:id="@+id/verifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verify"/>

    <CheckBox
        android:id="@+id/refactor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refactor"/>

    <CheckBox
        android:id="@+id/analytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Analytics"/>

    <CheckBox
        android:id="@+id/management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Management"/>





</LinearLayout>
